move to quarterly; some updates on readme

--- a/argentina2/run_sympy.ipynb
+++ b/argentina2/run_sympy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,23 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(7.20000000000000, 0.800000000000000)]\n"
+     ]
+    }
+   ],
    "source": [
     "alpha, beta = sm.symbols('alpha, beta')\n",
-    "eq1 = sm.Eq(alpha/(alpha+beta), 0.5)\n",
-    "eq2 = sm.Eq(alpha*beta / ((alpha+beta)**2 * (alpha + beta + 1)), 0.2)\n",
+    "eq1 = sm.Eq(alpha/(alpha+beta), 0.9)\n",
+    "eq2 = sm.Eq(alpha*beta / ((alpha+beta)**2 * (alpha + beta + 1)), 0.1**2)\n",
     "result = sm.solve([eq1, eq2], (alpha, beta))\n",
     "print(result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
